[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/player/player.gd" type="Script" id=1]
[ext_resource path="res://scenes/player/player.png" type="Texture" id=2]
[ext_resource path="res://scenes/guns/ranged/crossbow/crossbow.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/player/states/idle.gd" type="Script" id=4]
[ext_resource path="res://scenes/player/jump.gd" type="Script" id=5]
[ext_resource path="res://scenes/player/fall.gd" type="Script" id=6]
[ext_resource path="res://scenes/player/run.gd" type="Script" id=7]
[ext_resource path="res://scenes/player/double_jump.gd" type="Script" id=8]
[ext_resource path="res://scenes/camera/camera.tscn" type="PackedScene" id=9]

[sub_resource type="Animation" id=1]
resource_name = "cycle"
length = 5.0
loop = true

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[node name="player" type="KinematicBody2D"]
collision_mask = 6
script = ExtResource( 1 )
debug = true

[node name="rotate" type="Node2D" parent="."]

[node name="player" type="Sprite" parent="rotate"]
texture = ExtResource( 2 )
offset = Vector2( 0, -4 )

[node name="eyes_anim" type="AnimationPlayer" parent="rotate"]
autoplay = "cycle"
anims/cycle = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 2 )

[node name="down_left" type="RayCast2D" parent="."]
position = Vector2( -4, 12 )
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 2

[node name="down_right" type="RayCast2D" parent="."]
position = Vector2( 4, 12 )
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 2

[node name="crossbow" parent="." instance=ExtResource( 3 )]
visible = false
offset = Vector2( -1, 1 )

[node name="states" type="Node" parent="."]
editor/display_folded = true

[node name="idle" type="Node" parent="states"]
script = ExtResource( 4 )

[node name="jump" type="Node" parent="states"]
script = ExtResource( 5 )

[node name="fall" type="Node" parent="states"]
script = ExtResource( 6 )

[node name="run" type="Node" parent="states"]
script = ExtResource( 7 )

[node name="double_jump" type="Node" parent="states"]
script = ExtResource( 8 )

[node name="camera_target" type="Node2D" parent="."]

[node name="camera" parent="camera_target" instance=ExtResource( 9 )]

